# marshal

./: .gitignore  Makefile.am  Makefile.in  README  configure  configure.ac
examples/: .gitignore  Makefile  build.sh  marshal-file  printer  printer.c  re-encode.c
src/: Makefile.in  access.c  clone.c  decode.c  encode.c  encoding.c  equal.c  format.h  free.c  make.c  marshal.h  print.c
